--- a/index.html
+++ b/index.html
@@ -7,12 +7,58 @@
     <title>Social Posts</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
 <body>
 
+    <header id="site_header">
+        <h1 class="text-light text-center fw-bold fs-1">Social Posts</h1>
+    </header>
+    <main id="site_main">
+        <div class="container ">
+            <div class="row justify-content-center flex-column align-items-center">
+                <div class="col-6 my-3">
+                    <div class="post p-3">
+                        <div class="autore d-flex">
+                            <div class="image_wrapper">
+                                <img src="https://picsum.photos/id/1/200/300" alt="">
+                            </div>
+                            <div class="details mx-4">
+                                <div class="name">Phil Mangione</div>
+                                <div class="date_post">4 mesi fa</div>
+                            </div>
+
+                        </div>
+                        <div class="content my-3">
+                            <p class="content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                                pariatur fugiat at iure
+                                quibusdam laudantium soluta, nulla, culpa esse nobis aspernatur minus. Eius et assumenda
+                                earum quas, rem excepturi debitis?</p>
+                            <div class="content_img">
+                                <img src="https://picsum.photos/id/1/200/300" alt="">
+
+                            </div>
+                        </div>
+                        <div class="row like p-3">
+                            <div class="col-6 text-center">
+                                <button id="like_button"> <i class="fas fa-thumbs-up"></i> Mi Piace</button>
+                            </div>
+                            <div class="col-6 text-center">
+                                <div>Piace a <span class="n_likes">80</span> persone</div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </main>
     <script src="./assets/js/main.js"></script>
 </body>
 
