--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main id="site_main">
         <div class="container ">
             <div class="row justify-content-center flex-column align-items-center">
-                <div class="col-6 my-3">
+                <!-- <div class="col-6 my-3">
                     <div class="post p-3">
                         <div class="autore d-flex">
                             <div class="image_wrapper">
@@ -54,7 +54,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         </div>
